# irrigation-pi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  TODOS.md  config.toml.example  install.sh  install_poetry.sh  pyproject.toml  release-please-config.json  renovate.json  tsconfig.json  update.sh
.github/: dependabot.yml
.github/actions/setup-environment/: action.yaml
.github/workflows/: code-quality.yaml  pipeline.yml  release.yaml  tests.yaml
backend/: README.md  alembic.ini  config.toml.example  pyproject.toml
backend/api_specification/: api_specs_v0_1_0.json  api_specs_v1_0_0.json
backend/app/: __init__.py  config.py  exceptions.py  main.py  repositories.py  scheduling.py  services.py
backend/app/adapters/: __init__.py  base.py  gpio_devices.py  output_devices.py  relay.py  waveshare.py
backend/app/api/v1/: __init__.py  api.py  models.py
backend/app/api/v1/endpoints/: info.py  relay.py  schedule.py  schedules.py  system_date_time.py
backend/app/database/: __init__.py  config.py  models.py
backend/app/services/: board_info.py  jobs.py  relay.py  schedule.py  system_date_time.py  trigger.py
backend/migrations/: env.py
backend/migrations/versions/: 51b99b73e5b2_initial_migrations.py  adae873da5e9_initial_migrations.py  d75cb1febed1_initial_migrations.py
backend/sqlite_db/: sqlite.db
backend/tests/: conftest.py  fake_objects.py  utils.py
backend/tests/api/: test_api_endpoints.py  test_api_root.py
backend/tests/e2e/: test_api_endpoints.py
backend/tests/hardware/: __init__.py  test_gpio.py
backend/tests/integration/: test_service_schedule.py
backend/tests/unit/: test_adapter_waveshare_rpi_relay_board.py  test_ap_scheduler_repository.py  test_endpoints_system_date_time.py  test_relais_adapter.py  test_relay_services.py  test_repository_ap_scheduler.py  test_service_board_info.py  test_service_schedule.py  test_service_system_date_time.py  test_trigger_creation.py  test_waveshare_rpi_relay_board_adapter.py
backend/utilities/: export_api_specification.py
enclosures/: README.md
enclosures/files/: cover.FCStd  cover_underside.FCStd  pwm-board.FCStd  pwm-board_cover.FCStd  rpi3-waveshare_inlineNuts.FCStd
frontend/: .browserslistrc  .gitignore  README.md  angular.json  ionic.config.json  package-lock.json  package.json
frontend/@types/: openapi.d.ts
frontend/src/: global.scss  index.html  main.ts  polyfills.ts
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.models.ts  app.routes.ts
frontend/src/app/base/services/: base-api.service.ts
frontend/src/app/info/models/: info.models.ts
frontend/src/app/info/pages/board-info/: board-info.page.html  board-info.page.spec.ts  board-info.page.ts
frontend/src/app/info/services/: info.service.ts
frontend/src/app/relay/components/tile/: relay-tile.component.html  relay-tile.component.spec.ts  relay-tile.component.ts
frontend/src/app/relay/models/: relay.models.ts
frontend/src/app/relay/pages/list/: relay-list.page.html  relay-list.page.spec.ts  relay-list.page.ts
frontend/src/app/relay/services/: relay.service.ts
frontend/src/app/schedule/components/tile/: schedule-tile.component.html  schedule-tile.component.ts
frontend/src/app/schedule/components/tile/schedule-tile/: schedule-tile.component.html  schedule-tile.component.spec.ts  schedule-tile.component.ts
frontend/src/app/schedule/models/: scheduler.models.ts
frontend/src/app/schedule/pages/edit/schedule-edit/: schedule-edit.page.html  schedule-edit.page.scss  schedule-edit.page.spec.ts  schedule-edit.page.ts
frontend/src/app/schedule/pages/list/: schedule-list.page.html  schedule-list.page.spec.ts  schedule-list.page.ts
frontend/src/app/schedule/pipes/: display-string.pipe.spec.ts  display-string.pipe.ts
frontend/src/app/schedule/services/: schedule.service.spec.ts  schedule.service.ts
frontend/src/app/system-date-time/models/: system-date-time.models.ts
frontend/src/app/system-date-time/pages/system-date-time/: system-date-time.page.html  system-date-time.page.spec.ts  system-date-time.page.ts
frontend/src/app/system-date-time/services/: system-date-time.service.spec.ts  system-date-time.service.ts
frontend/src/assets/config/: appConfig.dev.json  appConfig.prod.json
frontend/src/environments/: defaults.ts  environment.models.ts  environment.prod.ts  environment.ts
frontend/src/theme/: variables.scss
frontend/www/: 3rdpartylicenses.txt
frontend/www/browser/: chunk-2YVE7ERU.js  chunk-36ESZ2IJ.js  chunk-3L42HEHQ.js  chunk-3RHAD6RE.js  chunk-3YFEXPJZ.js  chunk-4G6E6OF5.js  chunk-4SCXDPRD.js  chunk-4ZWH3VGH.js  chunk-5FOAX27Y.js  chunk-5FZMLTAB.js  chunk-5SE7H7X2.js  chunk-5YW3Q62W.js  chunk-6D7SB6EI.js  chunk-6MOO4ZL5.js  chunk-6O5TN2LV.js  chunk-6OREKIDA.js  chunk-72ORFVNI.js  chunk-76XA6DQQ.js  chunk-7OOC4MCY.js  chunk-ALV624TP.js  chunk-ARTETJFA.js  chunk-AVQ2NC4B.js  chunk-BKNJLLMA.js  chunk-BXGO5YMJ.js  chunk-C4ZWKFGK.js  chunk-C74AHN6J.js  chunk-CLAHLS7V.js  chunk-CR7OLEN2.js  chunk-CTPGVWTP.js  chunk-DF3GZESY.js  chunk-DNGJMV4Q.js  chunk-E2J45PGH.js  chunk-F6OOB4LP.js  chunk-FA25AEA4.js  chunk-FEIAHVOV.js  chunk-FMYNHP3B.js  chunk-FNLJE7QV.js  chunk-FSDDOBC3.js  chunk-FTWOZQG7.js  chunk-FVSUARKE.js  (+63 more)
irrigation_pi/: __init__.py  configure.py  constants.py  export.py  groups.py  install.py  restart.py  run.py  templates.py  uninstall.py  update.py  utils.py
irrigation_pi/tests/: __init__.py  test_create_application_configuration.py  test_create_nginx_config.py  test_create_systemd_config.py  test_generate_configuration_files.py  test_sudoers_configuration.py
manage/: __init__.py  export.py  groups.py  install.py  run.py  update.py  utils.py
