[project]
name = "irrigation-pi"
version = "1.5.0"
description = ""
authors = [{ name = "Max Pfeiffer", email = "max@maxpfeiffer.ch" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.18.5",
    "APScheduler==3.10.4",
    "asyncer==0.0.18",
    "click==8.4.2",
    "fastapi==0.139.0",
    "furl==2.1.4",
    "psutil==7.2.2",
    "pydantic-settings==2.14.2",
    "semver==3.0.4",
    "sqlalchemy==2.0.51",
    "sqlmodel==0.0.39",
    "toml==0.10.2",
    "uvicorn[standard]==0.51.0",
    "gpiozero==2.0.1",
    "pigpio==1.78",
    "RPi.GPIO==0.7.1 ; sys_platform == 'linux'",
]

[project.scripts]
irrigation-pi = "irrigation_pi:cli"

[dependency-groups]
dev = [
    "coverage==7.15.2",
    "pre-commit==4.6.1",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
]

[tool.ruff]
src = ["irrigation_pi", "backend"]
exclude = [".venv", "backend/migrations", "frontend"]

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "irrigation_pi/tests",
    "backend/tests"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["irrigation_pi"]
