[project]
name = "irrigation-pi"
requires-python = ">=3.9"

[tool.poetry]
name = "irrigation-pi"
version = "0.1.0"
description = ""
authors = ["Max Pfeiffer <max@maxpfeiffer.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
APScheduler = "4.0.0a4"
fastapi = "0.109.0"
furl = "2.1.3"
uvicorn = "0.26.0"

pydantic-settings = "2.1.0"

gpiozero = "2.0"
pigpio = "1.78"
lgpio = "0.0.0.2"

[tool.poetry.group.dev.dependencies]
coverage = "7.4.0"
pytest = "7.4.4"
pytest-cov = "4.1.0"
ruff = "0.1.14"
httpx = "0.26.0"

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
