[project]
name = "Irrigation Pi Backend"
requires-python = ">=3.9"

[tool.poetry]
name = "Irrigation Pi Backend"
version = "0.1.0"
description = ""
authors = ["Max Pfeiffer <max@maxpfeiffer.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "1.13.1"
APScheduler = "4.0.0a4"
asyncer = "0.0.3"
fastapi = "0.109.0"
furl = "2.1.3"
sqlalchemy = "2.0.25"
sqlmodel = "0.0.14"
uvicorn = {version = "0.26.0", extras = ["standard"]}

pydantic-settings = "2.1.0"

gpiozero = "2.0"
pigpio = "1.78"
lgpio = "0.0.0.2"

[tool.poetry.group.dev.dependencies]
coverage = "7.4.0"
pytest = "7.4.4"
pytest-asyncio = "0.23.3"
pytest-cov = "4.1.0"
ruff = "0.1.14"
httpx = "0.26.0"

[tool.ruff]
exclude = [".venv", "migrations"]

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
