[project]
name = "irrigation-pi-backend"
requires-python = ">=3.9"

[tool.poetry]
name = "irrigation-pi-backend"
version = "0.1.0"
description = ""
authors = ["Max Pfeiffer <max@maxpfeiffer.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "1.13.1"
APScheduler = "3.10.4"
asyncer = "0.0.3"
fastapi = "0.109.0"
furl = "2.1.3"
sqlalchemy = "2.0.25"
sqlmodel = "0.0.14"
toml = "0.10.2"
uvicorn = {version = "0.26.0", extras = ["standard"]}

pydantic-settings = "2.1.0"

gpiozero = "2.0"
pigpio = "1.78"
"RPi.GPIO" = {version = "0.7.1", markers= "sys_platform == 'linux'"}

[tool.poetry.group.dev.dependencies]
coverage = "7.4.1"
pytest = "8.0.0"
pytest-asyncio = "0.23.3"
pytest-cov = "4.1.0"
httpx = "0.26.0"


# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
